--- a/app/components/Website.styl
+++ b/app/components/Website.styl
@@ -11,6 +11,16 @@
 	webview
 		height: 100%
 
+.header
+	padding-bottom: 5px
+
+.title
+	display: inline-block
+	width: calc(100% - 60px)
+	height: 22px
+	overflow: hidden
+	text-overflow: ellipsis
+
 .navigation
 	position: absolute
 	left: 10px
